--- a/ProjetoBeautyHair/nbproject/project.properties
+++ b/ProjetoBeautyHair/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.sqlite-jdbc-3.32.3.2.jar=lib\\sqlite-jdbc-3.32.3.2.jar
+file.reference.sqlite-jdbc-3.32.3.2.jar=sqlite-jdbc-3.32.3.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
