--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /ProjetoBeautyHair/nbproject/private/
 /ProjetoBeautyHair/build/
+/ProjetoLes-Agendamento/nbproject/private/
+/ProjetoLes-Agendamento/build/
