--- a/ProjetoLes-Agendamento/nbproject/project.properties
+++ b/ProjetoLes-Agendamento/nbproject/project.properties
@@ -38,7 +38,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.32.3.2.jar}
+    ${file.reference.sqlite-jdbc-3.32.3.2.jar}:\
+    ${libs.struts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -65,7 +66,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
