--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /ProjetoBeautyHair/build/
 /ProjetoLes-Agendamento/nbproject/private/
 /ProjetoLes-Agendamento/build/
+/ProjetoLes-Agendamento/dist/
